--- a/css/style.css
+++ b/css/style.css
@@ -63,19 +63,34 @@ header{
     margin: 3rem 0;
 }
 
+/*FOOTER*/
+.footer{
+    background-color: var(--pramriOscuro);
+    padding: 1rem 0;
+    margin-top: 2rem;
+}
+.footer__texto{
+    font-family: var(--fuentePrincipal);
+    text-align: center;
+    font-size: 2.2rem;
+}
+
 /*NAVEGACION*/
 .navegacion{
     background-color: var(--pramriOscuro);
     padding: 1rem 0;
     display: flex;
     justify-content: center;
-    gap: 2rem;
+    gap: 2rem; /*SEPARACION FORMA NUEVA*/
 }
 .navegacion__enlace{
     font-family: var(--fuentePrincipal);
     color: var(--blanco);
     font-size: 3rem;
+    margin-right: 2rem;
 }
+
+.navegacino__enlace--activo,
 .navegacion__enlace:hover{
     color: var(--secundario);
 }
