--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ header{
     padding: 1rem 0;
     display: flex;
     justify-content: center;
-    gap: 2rem; /*SEPARACION FORMA NUEVA*/
+    /*gap: 2rem; * SEPARACION FORMA NUEVA*/
 }
 .navegacion__enlace{
     font-family: var(--fuentePrincipal);
@@ -89,8 +89,27 @@ header{
     font-size: 3rem;
     margin-right: 2rem;
 }
-
+.navegacion__enlace:last-of-type{/*LA PSEUDOCLASE NOS AYUDA A QUE LOS EFECTOS QUE APLIQUEMOS SOLO AFECTEN AL ULTIMO OBJETO.*/
+    margin-right: 0;
+}
 .navegacino__enlace--activo,
 .navegacion__enlace:hover{
     color: var(--secundario);
+}
+
+/*PRODUCTO*/
+.producto{
+
+}
+.producto__imagen{
+
+}
+.producto__informacion{
+
+}
+.producto__nombre{
+
+}
+.producto__precio{
+    
 }
