Creando seccion iconos en Nosotros.

--- a/css/style.css
+++ b/css/style.css
@@ -174,3 +174,23 @@ header{
         grid-column: 2 / 3;
     }
 }
+
+/*BLOQUES*/
+.bloques{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+@media (min-width: 768px) {
+    .bloques{
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+.bloque{
+    text-align: center;
+}
+.bloque__imagen{
+    width: 100%;
+}
+.bloque__titulo{
+    margin: 0;
+}
