--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ a{
     text-decoration: none;
 }
 img{
-    max-width: 100%;
+    width: 100%;
 }
 .contenedor{
     max-width: 120rem;
@@ -114,9 +114,6 @@ header{
     background-color: var(--pramriOscuro);
     padding: 1rem;
 }
-.producto__imagen{
-    width: 100%;
-}
 .producto__nombre{
     font-size: 4rem;
 }
@@ -167,7 +164,6 @@ header{
 }
 .nosotros__imagen{
     grid-row: 1 / 2;
-    width: 100%;
 }
 @media (min-width: 768px) {
     .nosotros__imagen{
@@ -188,9 +184,51 @@ header{
 .bloque{
     text-align: center;
 }
-.bloque__imagen{
-    width: 100%;
-}
 .bloque__titulo{
     margin: 0;
+}
+
+/*PAGINA DEL PRODUCTO*/
+@media (min-width: 768px) {
+    .camisa{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+}
+.formulario{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap:2rem;
+}
+.formulario__campo{
+/*
+**TODO SE PUEDE HACER CON UNA SOLA LINEA.**
+DEFINIMOS PRIMERO EL WIDTH, LUEGO EL ESTILO Y POR ULTIMO EL COLOR.*/
+    border: 1rem solid var(--pramriOscuro);
+/*-----------------------------------------------------------------*/
+    background-color: black;
+    color: var(--blanco);
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1rem;
+    appearance: none;
+
+    /*la primer linea de codigo funcional usa estos tres atributos.*/
+    /*border-color: var(--pramriOscuro);
+    border-width: 1rem;   
+    border-style: solid;*/
+}
+.formulario__submit{
+    background-color: var(--secundario);
+    border: none;
+    font-size: 2rem;
+    font-family: var(--fuentePrincipal);
+    padding: 2rem;
+    transition: background-color .3s ease;
+    grid-column: 1 / 3;
+}
+.formulario__submit:hover{
+    cursor: pointer;
+    background-color: var(--secundarioOscuro);
 }
